examples/expected/lex_invalid_char.txt
error: unexpected character '@'
  --> examples/invalid_lex_char.tp:1:1
   |
 1 | @
   | ^
